
{
   syntax = "proto3";

package BasketGrpc;

service BasketService {
  rpc AddBasketItem (AddBasketItemRequest) returns (AddBasketItemResponse);
  rpc GetBasket (GetBasketRequest) returns (GetBasketResponse);
}

message AddBasketItemRequest {
  string customer_id = 1;
  int32 product_id = 2;
  int32 quantity = 3;
}

message AddBasketItemResponse {
  bool success = 1;
}

message GetBasketRequest {
  string customer_id = 1;
}

message GetBasketResponse {
  repeated BasketItem items = 1;
}

message BasketItem {
  int32 product_id = 1;
  int32 quantity = 2;
}

}
